--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.12.7", features = ["json"] }
+rodio = "0.19.0"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
+stream-download = "0.9.0"
