--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ rodio = "0.19.0"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 stream-download = "0.9.0"
+thiserror = "1.0.64"
