--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.12.7", features = ["json"] }
-rodio = "0.19.0"
-serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
-stream-download = "0.9.0"
-thiserror = "1.0.64"
+reqwest = { version = "^0.12", features = ["json"] }
+rodio = "^0.19"
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
+stream-download = "^0.9"
+thiserror = "^1"
