--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
 stream-download = "^0.9"
 thiserror = "^1"
+
+# For examples
+[dev-dependencies]
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
